Update JSON workflow to use URL instead of TAG

--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -17,40 +17,38 @@ jobs:
       run: |
         # Download latest release metadata
         curl -s https://api.github.com/repos/ProjectNyxian/Nyxian/releases/latest > release.json
-        TAG=$(jq -r '.tag_name' release.json)
-        DATE=$(jq -r '.published_at' release.json)
+
         URL=$(jq -r '.assets[] | select(.name | endswith(".ipa")) | .browser_download_url' release.json)
+        DATE=$(jq -r '.published_at' release.json)
         SIZE=$(curl -sI "$URL" | grep -i Content-Length | awk '{print $2}' | tr -d '\r')
         BODY=$(jq -r '.body' release.json | sed ':a;N;$!ba;s/\n/\\n/g' | sed 's/"/\\"/g')
-    
-        echo "TAG=$TAG" >> $GITHUB_ENV
-        echo "DATE=$DATE" >> $GITHUB_ENV
+
         echo "URL=$URL" >> $GITHUB_ENV
+        echo "DATE=$DATE" >> $GITHUB_ENV
         echo "SIZE=$SIZE" >> $GITHUB_ENV
         echo "BODY=$BODY" >> $GITHUB_ENV
-    
+
     - name: Update AltStore JSON
       run: |
         FILE=altstore.json
-    
-        if jq -e ".apps[0].versions[] | select(.buildVersion==\"${TAG}\")" "$FILE" > /dev/null; then
-          echo "Version ${TAG} already exists"
+
+        # Check if this downloadURL already exists
+        if jq -e ".apps[0].versions[] | select(.downloadURL==\"${URL}\")" "$FILE" > /dev/null; then
+          echo "Version with this URL already exists"
         else
-          echo "Adding new version ${TAG}"
+          echo "Adding new version with URL ${URL}"
           jq ".apps[0].versions += [{
             \"downloadURL\": \"${URL}\",
             \"size\": ${SIZE},
             \"version\": \"1.0\",
-            \"buildVersion\": \"${TAG}\",
             \"date\": \"${DATE}\",
             \"localizedDescription\": \"${BODY}\",
             \"minOSVersion\": null
           }]" "$FILE" > tmp.$$.json && mv tmp.$$.json "$FILE"
         fi
 
-
     - name: Commit changes
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        commit_message: "Update Nyxian AltStore JSON for release ${{ env.TAG }}"
+        commit_message: "Update Nyxian AltStore JSON for release ${{ env.URL }}"
         commit_user_name: "GitHub Action"
