Update JSON file name in workflow
Changed the JSON file name from 'altstore.json' to 'source.json' for the update process.

--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -41,7 +41,7 @@ jobs:
 
     - name: Update AltStore JSON
       run: |
-        FILE=altstore.json
+        FILE=source.json
 
         # Controleer of deze downloadURL al bestaat
         if jq -e ".apps[0].versions[] | select(.downloadURL==\"${URL}\")" "$FILE" > /dev/null; then
