--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -11,6 +11,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        # Ensure LFS files are handled correctly
+        lfs: true 
+
+    # NEW STEP: Install and Configure Git LFS for large file support
+    - name: Configure Git LFS
+      run: |
+        # Install git-lfs on the Ubuntu runner
+        sudo apt-get update
+        sudo apt-get install -y git-lfs
+
+        # Initialize LFS in the repository
+        git lfs install
+
+        # Tell Git to track the large IPA file in the Resources/App directory using LFS
+        # This creates or updates the .gitattributes file, which the auto-commit action will pick up.
+        git lfs track "Resources/App/*.ipa"
 
     - name: Get all Nyxian releases
       id: nyx
