--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -10,70 +10,106 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout Repository
+      uses: actions/checkout@v3
       with:
-        # Ensure LFS files are handled correctly
-        lfs: true 
+        # We need the source.json file for the early check, but defer LFS setup
+        lfs: false 
 
-    # NEW STEP: Install and Configure Git LFS for large file support
-    - name: Configure Git LFS
+    - name: Install JSON Processor (jq)
       run: |
-        # Install git-lfs on the Ubuntu runner
+        # jq is lightweight and necessary for the early check
         sudo apt-get update
-        sudo apt-get install -y git-lfs
+        sudo apt-get install -y jq
 
-        # Initialize LFS in the repository
-        git lfs install
-
-        # Tell Git to track the large IPA file in the Resources/App directory using LFS
-        # This creates or updates the .gitattributes file, which the auto-commit action will pick up.
-        git lfs track "Resources/App/*.ipa"
-
-    - name: Get all Nyxian releases
+    - name: Get latest Nyxian release info
       id: nyx
       run: |
         echo "Fetching all releases..."
-        # Note: Using an authenticated request (via GITHUB_TOKEN) is better for rate limits
-        RELEASES_JSON=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/ProjectNyxian/Nyxian/releases)
+        RELEASES_FILE="releases.json"
 
-        # Check if the fetch was successful
-        if [ "$(echo "$RELEASES_JSON" | jq 'type')" != '"array"' ]; then
+        # Note: Using an authenticated request (via GITHUB_TOKEN) is better for rate limits
+        curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/ProjectNyxian/Nyxian/releases > "$RELEASES_FILE"
+
+        if [ "$(jq 'type' "$RELEASES_FILE")" != '"array"' ]; then
           echo "Error fetching releases or no releases found."
           exit 1
         fi
+        
+        # Find the latest release that contains an .ipa asset
+        RELEASE_INFO=$(jq -r '.[] | select(.assets[]? | .name | endswith(".ipa"))' "$RELEASES_FILE" | head -n 1)
 
-        for i in $(seq 0 $(($(echo "$RELEASES_JSON" | jq 'length') - 1))); do
-            # Filter assets to find the first one ending in ".ipa"
-            URL=$(echo "$RELEASES_JSON" | jq -r ".[$i].assets[]? | select(.name | endswith(\".ipa\")) | .browser_download_url")
-            
-            if [ -n "$URL" ]; then
-                TAG=$(echo "$RELEASES_JSON" | jq -r ".[$i].tag_name")
-                DATE=$(echo "$RELEASES_JSON" | jq -r ".[$i].published_at")
-                
-                # Format the release body: escape newlines (\\n) and double quotes (\\") for safe JSON insertion
-                BODY=$(echo "$RELEASES_JSON" | jq -r ".[$i].body" | sed ':a;N;$!ba;s/\n/\\n/g' | sed 's/"/\\"/g')
+        if [ -z "$RELEASE_INFO" ]; then
+            echo "No releases with an IPA asset found."
+            exit 0
+        fi
 
-                echo "Found release $TAG at $URL"
+        # Extract required information from the latest release
+        URL=$(echo "$RELEASE_INFO" | jq -r ".assets[] | select(.name | endswith(\".ipa\")) | .browser_download_url" | head -n 1)
+        TAG=$(echo "$RELEASE_INFO" | jq -r ".tag_name")
+        DATE=$(echo "$RELEASE_INFO" | jq -r ".published_at")
+        
+        # Format the release body for safe JSON insertion
+        BODY=$(echo "$RELEASE_INFO" | jq -r ".body" | sed -e ':a;N;$!ba;s/\n/\\n/g' -e 's/"/\\"/g')
 
-                # Export variables to be used in subsequent steps
-                echo "URL=$URL" >> $GITHUB_ENV
-                echo "DATE=$DATE" >> $GITHUB_ENV
-                echo "BODY=$BODY" >> $GITHUB_ENV
-                echo "TAG=$TAG" >> $GITHUB_ENV
+        echo "Found latest release $TAG at $URL"
 
-                break  # use the first found release with IPA (which should be the latest)
-            fi
-        done
+        # Export variables
+        echo "URL=$URL" >> $GITHUB_ENV
+        echo "DATE=$DATE" >> $GITHUB_ENV
+        echo "BODY=$BODY" >> $GITHUB_ENV
+        echo "TAG=$TAG" >> $GITHUB_ENV
+
+    ---
+
+    ## 🚀 Early Exit Check
+
+    - name: Check if version already exists (EARLY EXIT)
+      run: |
+        FILE=source.json
+        TAG="${{ env.TAG }}"
+        
+        if [ -z "$TAG" ]; then
+          echo "No TAG found. Exiting."
+          exit 0
+        fi
+
+        # Check if a version with the same buildVersion (TAG) exists in the JSON
+        if jq -e ".apps[0].versions[] | select(.buildVersion==\"${TAG}\")" "$FILE" > /dev/null; then
+          echo "Version with buildVersion ${TAG} already exists. Stopping workflow to avoid unnecessary processing."
+          # Use a specific non-zero exit code (78) to signal a controlled skip/cancellation
+          exit 78 
+        else
+          echo "New version ${TAG} found. Proceeding with full update."
+        fi
+
+    ---
+
+    ## 🛠️ Full Update (Only runs if new version is detected)
+
+    - name: Configure Git LFS and Install plist-utils
+      run: |
+        # Install git-lfs and plist-utils now, only if a new version needs processing
+        sudo apt-get update
+        sudo apt-get install -y git-lfs libplist-utils
+
+        # Initialize LFS in the repository
+        git lfs install
+        # Tell Git to track the large IPA file
+        git lfs track "Resources/App/*.ipa"
+        
+        # We need to explicitly check out LFS files now that LFS is configured
+        git lfs pull || echo "No LFS files to pull or error pulling LFS files."
+
 
     - name: Modify App Package
       run: |
+        # ... (rest of the steps remain the same) ...
         if [ -z "${{ env.URL }}" ]; then
           echo "No IPA URL found. Skipping IPA modification."
           exit 0
         fi
 
-        sudo apt-get update && sudo apt-get install -y libplist-utils
-        
         # 1. Download original IPA (using a unique temporary name)
         wget "${{ env.URL }}" -O Nyxian_temp.ipa
         
@@ -85,6 +121,11 @@ jobs:
         VERSION=$(grep "buildVersion" AppInfo.swift | sed -E 's/.*buildVersion: Double = ([0-9.]+).*/\1/')
         APP_PATH=$(find Nyxian_extracted/Payload -name "*.app" -maxdepth 1)
         PLIST_PATH="${APP_PATH}/Info.plist"
+
+        if [ -z "$VERSION" ]; then
+            echo "Warning: Could not extract VERSION from AppInfo.swift. Using TAG as fallback."
+            VERSION="${{ env.TAG }}"
+        fi
 
         plistutil -replace CFBundleVersion -string "${{ env.TAG }}" "${PLIST_PATH}"
         plistutil -replace CFBundleShortVersionString -string "${VERSION}" "${PLIST_PATH}"
@@ -108,11 +149,8 @@ jobs:
     - name: Cleanup Temporary Artifacts
       run: |
         echo "Cleaning up large temporary files to prevent Git size violation..."
-        # Remove the unzipped folder (contains oversized files)
         rm -rf Nyxian_extracted
-        # Remove all temporary IPA files
         rm -f Nyxian_temp.ipa Nyxian_modified.ipa
-        # Remove the downloaded Swift file
         rm -f AppInfo.swift
 
 
@@ -120,41 +158,28 @@ jobs:
       run: |
         FILE=source.json
 
-        # Check if the version already exists using the download URL
         URL="https://github.com/jurre111/Nyxian/raw/refs/heads/main/Resources/App/Nyxian.ipa" 
         TAG="${{ env.TAG }}"
         VERSION="${{ env.VERSION }}"
-        SIZE="${{ env.SIZE }}" # Now using the correct size in bytes
+        SIZE="${{ env.SIZE }}" 
         DATE="${{ env.DATE }}"
         BODY="${{ env.BODY }}"
 
-        if [ -z "$URL" ]; then
-          echo "No IPA release URL found. Skipping update."
-          exit 0
-        fi
-
-        if jq -e ".apps[0].versions[] | select(.buildVersion==\"${TAG}\")" "$FILE" > /dev/null; then
-          echo "Version with buildVersion ${TAG} already exists. No changes needed."
-        else
-          echo "Adding new version ${TAG} as the FIRST entry."
+        echo "Adding new version ${TAG} as the FIRST entry."
           
-          # This is the critical change:
-          # We define the new version object in an array [{...}] 
-          # and PREPEND it to the existing versions array using the '+' operator.
-          jq ".apps[0].versions = [{
-            \"downloadURL\": \"${URL}\",
-            \"size\": ${SIZE},
-            \"version\": \"${VERSION}\",
-            \"buildVersion\": \"${TAG}\",
-            \"date\": \"${DATE}\",
-            \"localizedDescription\": \"${BODY}\",
-            \"minOSVersion\": null
-          }] + .apps[0].versions" "$FILE" > tmp.$$.json && mv tmp.$$.json "$FILE"
-        fi
+        # Prepend the new version object to the existing versions array
+        jq ".apps[0].versions = [{
+          \"downloadURL\": \"${URL}\",
+          \"size\": ${SIZE},
+          \"version\": \"${VERSION}\",
+          \"buildVersion\": \"${TAG}\",
+          \"date\": \"${DATE}\",
+          \"localizedDescription\": \"${BODY}\",
+          \"minOSVersion\": null
+        }] + .apps[0].versions" "$FILE" > tmp.$$.json && mv tmp.$$.json "$FILE"
 
     - name: Commit changes
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        # This action now only finds the changes to source.json and Resources/App/Nyxian.ipa
         commit_message: "Update Nyxian AltStore JSON and IPA for release ${{ env.TAG }}"
         commit_user_name: "GitHub Action"
