Fix packaging process by updating IPA re-packaging path to include Payload directory

--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -131,7 +131,7 @@ jobs:
         plistutil -replace CFBundleShortVersionString -string "${VERSION}" "${PLIST_PATH}"
         
         # 4. Re-package the modified IPA using a temporary name
-        zip -r Nyxian_modified.ipa Nyxian_extracted/*
+        zip -r Nyxian_modified.ipa Nyxian_extracted/Payload
 
         # 5. Create the target directory structure
         mkdir -p Resources/App
