--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -2,7 +2,7 @@ name: Update Nyxian AltStore JSON
 
 on:
   schedule:
-    - cron: "*/35 * * * *"  # every 35 minutes
+    - cron: "*/35 * * * *"
   workflow_dispatch:
 
 jobs:
@@ -10,103 +10,63 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
       with:
-        # Ensure LFS files are handled correctly
         lfs: true 
 
     - name: Configure Git LFS
       run: |
-        # Install git-lfs on the Ubuntu runner
         sudo apt-get update
         sudo apt-get install -y git-lfs
-
-        # Initialize LFS in the repository
         git lfs install
-
-        # Tell Git to track the large IPA file. This creates/updates .gitattributes
         git lfs track "Resources/App/*.ipa"
 
-    - name: Get latest Nyxian release info
+    - name: Get all Nyxian releases
       id: nyx
       run: |
-        echo "Fetching all releases..."
-        # Note: Using an authenticated request (via GITHUB_TOKEN) is better for rate limits
+        echo "Fetching releases..."
         RELEASES_JSON=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/ProjectNyxian/Nyxian/releases)
 
-        # Check if the fetch was successful
         if [ "$(echo "$RELEASES_JSON" | jq 'type')" != '"array"' ]; then
-          echo "Error fetching releases or no releases found."
+          echo "Error fetching releases."
           exit 1
         fi
 
         for i in $(seq 0 $(($(echo "$RELEASES_JSON" | jq 'length') - 1))); do
-            # Filter assets to find the first one ending in ".ipa"
             URL=$(echo "$RELEASES_JSON" | jq -r ".[$i].assets[]? | select(.name | endswith(\".ipa\")) | .browser_download_url")
-            
             if [ -n "$URL" ]; then
                 TAG=$(echo "$RELEASES_JSON" | jq -r ".[$i].tag_name")
                 DATE=$(echo "$RELEASES_JSON" | jq -r ".[$i].published_at")
-                
-                # Format the release body: escape newlines (\\n) and double quotes (\\") for safe JSON insertion
                 BODY=$(echo "$RELEASES_JSON" | jq -r ".[$i].body" | sed ':a;N;$!ba;s/\n/\\n/g' | sed 's/"/\\"/g')
 
-                echo "Found latest release with IPA: $TAG"
-
-                # Export variables to be used in subsequent steps
                 echo "URL=$URL" >> $GITHUB_ENV
                 echo "DATE=$DATE" >> $GITHUB_ENV
                 echo "BODY=$BODY" >> $GITHUB_ENV
                 echo "TAG=$TAG" >> $GITHUB_ENV
-
-                break  # use the first found release with IPA (which should be the latest)
+                break
             fi
         done
-        
-        if [ -z "${{ env.TAG }}" ]; then
-          echo "No release with an IPA was found."
-          # TAG will be empty, causing the next step to correctly report "is_new=false"
-        fi
 
-    - name: Check if release is new
-      id: check_release
+    # -------------------------------
+    # NEW: EARLY EXIT IF VERSION EXISTS
+    # -------------------------------
+    - name: Check if version already exists
       run: |
-        TAG_TO_CHECK="${{ env.TAG }}"
-        
-        if [ -z "$TAG_TO_CHECK" ]; then
-          echo "No release tag found from previous step. Stopping."
-          echo "is_new=false" >> $GITHUB_OUTPUT
+        FILE=source.json
+        TAG="${{ env.TAG }}"
+
+        if jq -e ".apps[0].versions[] | select(.buildVersion == \"${TAG}\")" "$FILE" > /dev/null; then
+          echo "Version ${TAG} already exists. Exiting workflow."
           exit 0
         fi
 
-        FILE=source.json
-        
-        echo "Checking for buildVersion '$TAG_TO_CHECK' in $FILE..."
-        if jq -e ".apps[0].versions[] | select(.buildVersion==\"${TAG_TO_CHECK}\")" "$FILE" > /dev/null; then
-          echo "Version ${TAG_TO_CHECK} already exists. No update needed."
-          echo "is_new=false" >> $GITHUB_OUTPUT
-        else
-          echo "Version ${TAG_TO_CHECK} is new. Proceeding with update."
-          echo "is_new=true" >> $GITHUB_OUTPUT
-        fi
-      outputs:
-        is_new: ${{ steps.check_release.outputs.is_new }}
-
+    # Only continues if new version exists
     - name: Modify App Package
-      # This step now only runs if the check_release step determined it's a new version
-      if: steps.check_release.outputs.is_new == 'true'
       run: |
-        echo "Starting IPA modification for new release ${{ env.TAG }}"
         sudo apt-get update && sudo apt-get install -y libplist-utils
-        
-        # 1. Download original IPA (using a unique temporary name)
         wget "${{ env.URL }}" -O Nyxian_temp.ipa
-        
-        # 2. Download source file
         wget https://raw.githubusercontent.com/ProjectNyxian/Nyxian/refs/heads/main/Nyxian/UI/Settings/AppInfo.swift -O AppInfo.swift
 
-        # 3. Unzip and modify plist
         unzip Nyxian_temp.ipa -d Nyxian_extracted
         VERSION=$(grep "buildVersion" AppInfo.swift | sed -E 's/.*buildVersion: Double = ([0-9.]+).*/\1/')
         APP_PATH=$(find Nyxian_extracted/Payload -name "*.app" -maxdepth 1)
@@ -114,53 +74,31 @@ jobs:
 
         plistutil -replace CFBundleVersion -string "${{ env.TAG }}" "${PLIST_PATH}"
         plistutil -replace CFBundleShortVersionString -string "${VERSION}" "${PLIST_PATH}"
-        
-        # 4. Re-package the modified IPA using a temporary name
+
         zip -r Nyxian_modified.ipa Nyxian_extracted/Payload
 
-        # 5. Create the target directory structure
         mkdir -p Resources/App
-        
-        # 6. Copy the modified IPA to the final destination
         cp Nyxian_modified.ipa Resources/App/Nyxian.ipa
 
-        # 7. Calculate size of the final, committed file (in bytes)
         SIZE=$(stat -c%s Resources/App/Nyxian.ipa)
-        
-        # 8. Export variables
         echo "VERSION=$VERSION" >> $GITHUB_ENV
         echo "SIZE=$SIZE" >> $GITHUB_ENV
 
     - name: Cleanup Temporary Artifacts
-      # Only run if the modification step ran
-      if: steps.check_release.outputs.is_new == 'true'
       run: |
-        echo "Cleaning up large temporary files..."
-        # Remove the unzipped folder (contains oversized files)
         rm -rf Nyxian_extracted
-        # Remove all temporary IPA files
-        rm -f Nyxian_temp.ipa Nyxian_modified.ipa
-        # Remove the downloaded Swift file
-        rm -f AppInfo.swift
+        rm -f Nyxian_temp.ipa Nyxian_modified.ipa AppInfo.swift
 
     - name: Update AltStore JSON
-      # Only run if the modification step ran
-      if: steps.check_release.outputs.is_new == 'true'
       run: |
         FILE=source.json
-
-        # Get all variables from the environment
-        URL="https://github.com/jurre111/Nyxian/raw/refs/heads/main/Resources/App/Nyxian.ipa" 
+        URL="https://github.com/jurre111/Nyxian/raw/refs/heads/main/Resources/App/Nyxian.ipa"
         TAG="${{ env.TAG }}"
         VERSION="${{ env.VERSION }}"
-        SIZE="${{ env.SIZE }}" # Now using the correct size in bytes
+        SIZE="${{ env.SIZE }}"
         DATE="${{ env.DATE }}"
         BODY="${{ env.BODY }}"
 
-        echo "Adding new version ${TAG} as the FIRST entry in $FILE."
-          
-        # We no longer need the if/else check inside this script,
-        # because this step only runs if the 'check_release' step passed.
         jq ".apps[0].versions = [{
           \"downloadURL\": \"${URL}\",
           \"size\": ${SIZE},
@@ -170,13 +108,9 @@ jobs:
           \"localizedDescription\": \"${BODY}\",
           \"minOSVersion\": null
         }] + .apps[0].versions" "$FILE" > tmp.$$.json && mv tmp.$$.json "$FILE"
-        echo "source.json updated."
 
     - name: Commit changes
-      # Only run if we actually updated the JSON
-      if: steps.check_release.outputs.is_new == 'true'
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        # This action now only finds the changes to source.json, .gitattributes, and Resources/App/Nyxian.ipa
         commit_message: "Update Nyxian AltStore JSON and IPA for release ${{ env.TAG }}"
         commit_user_name: "GitHub Action"
